--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
