--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.0.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
