--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
