--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "headlessui": "^0.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "12.3.1",
     "react": "18.2.0",
